<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_dark"
    android:gravity="center"
    android:orientation="vertical">


    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout4">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="12dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/medium"
                android:padding="0dp"
                android:text="@string/name_label"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/customer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/lucky_edit_background"
                android:fontFamily="@font/medium"
                android:padding="12dp"
                android:text="@string/customer_name_placeholder"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/medium"
                android:text="@string/mobile_number_label"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/customer_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/lucky_edit_background"
                android:fontFamily="@font/medium"
                android:padding="12dp"
                android:text="@string/mobile_number_placeholder"
                android:textAllCaps="false"
                android:textColor="@color/black" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10sp"
                    android:drawableTint="@color/black"
                    android:text="user id "
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    app:drawableLeftCompat="@drawable/lucky_ic_id"
                    app:drawableStartCompat="@drawable/lucky_ic_id" />

                <TextView
                    android:id="@+id/customer_id"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:visibility="gone" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/profile_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:visibility="gone"
        app:cardCornerRadius="4sp"
        app:cardElevation="4sp"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <ListView
            android:id="@+id/listViewProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/lucky_button_gradients"
        android:fontFamily="@font/bold"
        android:padding="16dp"
        android:text="Change Password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

</androidx.constraintlayout.widget.ConstraintLayout>