<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="lucky.online.matka.app.ui.main.fragments.history.BidHistory">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="8sp"
        app:cardElevation="1sp">
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/from_date"
                        android:fontFamily="@font/semi"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="@dimen/input_label_size" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/from_date"
                        android:fontFamily="@font/semi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/lucky_edit_background"
                        android:drawableStart="@drawable/lucky_ic_calendar"
                        android:drawablePadding="10dp"
                        android:focusable="false"
                        android:padding="12dp"
                        android:textSize="15sp" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/end_date"
                        android:fontFamily="@font/semi"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="@dimen/input_label_size" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/to_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/lucky_edit_background"
                        android:drawableStart="@drawable/lucky_ic_calendar"
                        android:fontFamily="@font/semi"
                        android:drawablePadding="10dp"
                        android:focusable="false"
                        android:padding="12dp"
                        android:textSize="15sp" />


                </LinearLayout>

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_submit"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/lucky_background_pl_n"
                android:padding="@dimen/bet_submit_button_padding"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</LinearLayout>